--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "debug": "~4.1.1",
     "escape-html": "^1.0.3",
     "express": "~4.17.1",
+    "formidable": "^1.2.2",
     "http-errors": "~1.8.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.10.0",
